2007-10-23  Jeff Johnston  <jjohnstn@redhat.com>

	* libc/stdlib/wcstombs_r.c: Add SUSV2 support for calculating
	size if output buffer is NULL.

2007-10-17  Jeff Johnston  <jjohnstn@redhat.com>

	* libm/mathfp/s_logarithm.c: Fix error introduced by previous
	fix when handling negative input values.  Make function
	consistent with math directory and glibc version such that
	inf and nan values return inf and nan respectively with no
	errno setting.
	* libm/mathfp/sf_logarithm.c: Ditto.
	* libm/math/w_log.c: Set errno to ERANGE when input is 0.0.
	* libm/math/wf_log.c: Ditto.
	* libm/math/w_log10.c: Ditto.
	* libm/math/wf_log10.c: Ditto.

2007-10-17  Jeff Johnston  <jjohnstn@redhat.com>

	* libm/mathfp/s_logarithm.c: Fix case where input is 0 to
	return -inf.
	* libm/mathfp/sf_logarithm.c: Ditto.

2007-10-17  Jeff Johnston  <jjohnstn@redhat.com>

	* libc/machine/i386/machine/fastmath.h: New file.

2007-10-13  Eric Blake  <ebb9@byu.net>

	* libc/stdio/vfprintf.c (_VFPRINTF_R) [__OPTIMIZE_SIZE__]:
	Correctly nest else within conditionals.
	Reported by Artur Lipowski.

2007-10-09  Nick Clifton  <nickc@redhat.com>

	* libc/sys/linux/dl/do-lookup.h (FCT): Support symbols with
	the STT_COMMON type.

2007-10-09  Ben Elliston  <bje@au.ibm.com>

	* libm/machine/spu/headers/acosd2.h: Include spu_intrinsics.h
	before simdmath.h to get a definition for `vector'.
	* libm/machine/spu/headers/asind2.h: Likewise.

2007-09-28  Patrick Mansfield  <patmans@us.ibm.com>

	* libm/machine/spu/headers/dom_chkd_less_than.h: New file.
	* libm/machine/spu/headers/dom_chkd_negone_one.h: Ditto.
	* libm/machine/spu/headers/dom_chkf_less_than.h: Ditto.
	* libm/machine/spu/headers/dom_chkf_negone_one.h: Ditto.
	* libm/machine/spu/headers/acos.h: Add domain check.
	* libm/machine/spu/headers/acosf.h: Ditto.
	* libm/machine/spu/headers/acosh.h: Ditto.
	* libm/machine/spu/headers/acoshf.h: Ditto.
	* libm/machine/spu/headers/asin.h: Ditto.
	* libm/machine/spu/headers/asinf.h: Ditto.